tests/snapshots/rescanning_a_dir@linux-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  8.0 KiB | scanned 0 s ago | rescanning a/...
   4.0 KiB  50.0% a/                                           4.0 KiB  x/
   4.0 KiB  50.0% b/















a/ | 4.0 KiB  own 0 B
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 0  35..38  DarkGray
 1   0..59  Indexed(231) on Indexed(25) BOLD
 1  60..70  Green
 1  70..71  DarkGray
 1  72..74  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..20  BOLD
18   0..2   BOLD
18   2..5   DarkGray
18   5..12  Green
18  12..18  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
