tests/snapshots/rescanning_a_dir@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/fixture  24.0 KiB | scanned 0 s ago | rescanning a/...
  12.0 KiB  50.0% a/                                           8.0 KiB  x/
   8.0 KiB  33.3% b/















a/ | 12.0 KiB  own 4.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..18  BOLD
 0  18..21  DarkGray
 0  36..39  DarkGray
 1   0..59  Indexed(231) on Indexed(25) BOLD
 1  60..70  Green
 1  70..71  DarkGray
 1  72..74  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..20  BOLD
18   0..2   BOLD
18   2..5   DarkGray
18   5..13  Green
18  13..19  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
