tests/snapshots/root_empty_selected@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/fixture  1.6 MiB | 2 folders unreadable (d) | scanned 0 s ago
   1.5 MiB  95.8% big/
  48.0 KiB+  3.0% a/
   8.0 KiB   0.5% top
   4.0 KiB   0.2% empty/
   4.0 KiB   0.2% locked/ (denied: EACCES)
       0 B        sym











empty/ | 4.0 KiB  own 4.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 0  44..47  DarkGray
 1   0..10  Yellow
 1  10..11  DarkGray
 1  12..17  Yellow
 1  18..22  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..20  BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 4   0..59  Indexed(231) on Indexed(25) BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  BOLD
 5  25..42  Red
 6   0..11  DarkGray
 6  12..17  DarkGray
18   0..6   BOLD
18   6..9   DarkGray
18   9..16  Green
18  16..22  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
